Restyled welcome section to collapse when device connected

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link href="//cdn.muicss.com/mui-0.9.39/css/mui.min.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <script>
       if ( window.location.protocol != 'https:' ) {
@@ -19,7 +18,7 @@
     </noscript>
     <div id="root">
       <script src='/bundle.js'></script>
-      <script src="https://engage.transim.com/Scripts/twgt_v2.js"></script>
+      <script src="//app-sj14.marketo.com/js/forms2/js/forms2.min.js"></script>
     </div>
   </body>
 </html>
