ui style updates

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -10,7 +10,7 @@
         location.href = location.href.replace( 'http://', 'https://' );
       }
       </script>
-    <title>Microchip Microsite</title>
+    <title>AVR-IoT powered by Leverege</title>
   </head>
   <body>
     <noscript>
